# Dovecot_WebInterface

./: .env.example  .gitignore  CLAUDE.md  README.md  REMEDIATION_PLAN.md  manage.py  pyproject.toml  requirements.txt  setup.sh  update.sh
.claude/: settings.local.json
app/: __init__.py  config.py  database.py  main.py  templates_setup.py
app/api/: agent.py  alerts.py  auth.py  logs.py  partials.py  queue.py  storage.py  users.py
app/core/: audit.py  limiter.py  middleware.py  permissions.py  security.py
app/services/: alert_checker.py  llm_client.py  log_agent.py
app/templates/: base.html  dashboard.html  login.html
app/templates/alerts/: index.html
app/templates/audit/: index.html
app/templates/logs/: agent.html  index.html
app/templates/partials/: _macros.html  agent_runs.html  agent_settings.html  agent_suggestions.html  alerts_active.html  alerts_history.html  alerts_rules.html  alerts_settings.html  alerts_test_result.html  audit_log.html  dashboard_alerts.html  dashboard_stats.html  error.html  logs_allowlist.html  logs_banned.html  logs_entries.html  logs_stats.html  queue_stats.html  queue_summary.html  queue_table.html  recent_activity.html  storage_history.html  storage_mailboxes.html  storage_overview.html  storage_summary.html  (+1 more)
privileged/: __init__.py  server.py
systemd/: dovecot-webadmin-helper.service  dovecot-webadmin.service
tests/: conftest.py  test_agent.py  test_alerts.py  test_audit.py  test_auth.py  test_dashboard.py  test_database.py  test_helper_logic.py  test_logs.py  test_pages.py  test_queue.py  test_security.py
(+3 files in other folders)
